[gd_scene load_steps=17 format=3 uid="uid://b55w3fi6ujxe3"]

[ext_resource type="Script" uid="uid://2di5vxno2r63" path="res://Menus/Scripts/MainMenuController.gd" id="1_k3e35"]
[ext_resource type="Script" uid="uid://b8jf004lj4lbt" path="res://Menus/Scripts/main_menu_sound_manager.gd" id="2_n0sxy"]
[ext_resource type="AudioStream" uid="uid://bdydhwhstq8pa" path="res://Sounds/swooshsound.mp3" id="5_lt3ki"]
[ext_resource type="AudioStream" uid="uid://c73kr3l5w007k" path="res://Sounds/hoverSound.mp3" id="6_srmur"]
[ext_resource type="AudioStream" uid="uid://c334jptuykx8x" path="res://Sounds/clickSound1.mp3" id="7_d38xc"]
[ext_resource type="Texture2D" uid="uid://v8hyqjv24xf6" path="res://Menus/Images/pc1.jpg" id="8_0kq35"]
[ext_resource type="Texture2D" uid="uid://pc7xcm0rfmbd" path="res://Menus/Images/soundIcon.png" id="10_mxwkk"]

[sub_resource type="LabelSettings" id="LabelSettings_uj1lj"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_i3pit"]
font_size = 130
font_color = Color(0.403922, 0.0588235, 0.25098, 0.627451)

[sub_resource type="LabelSettings" id="LabelSettings_lfya7"]
font_size = 130
font_color = Color(0.403922, 0.0588235, 0.25098, 0.627451)

[sub_resource type="LabelSettings" id="LabelSettings_qx8qx"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_moy1g"]
font_size = 29

[sub_resource type="BoxMesh" id="BoxMesh_demcr"]

[sub_resource type="Animation" id="Animation_1g281"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.785398, 6.28319, 0.785398)]
}

[sub_resource type="Animation" id="Animation_2lsf4"]
resource_name = "spin"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.785398, 0, 0.785398), Vector3(0.785398, 6.28319, 0.785398)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3s758"]
_data = {
&"RESET": SubResource("Animation_1g281"),
&"spin": SubResource("Animation_2lsf4")
}

[node name="Menus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k3e35")

[node name="Sound Manager" type="Node" parent="."]
script = ExtResource("2_n0sxy")
master_bus = "Master"
main_menu_bus = "MainMenuMusic"
sfx_bus = "sfx"

[node name="SwooshSound" type="AudioStreamPlayer" parent="Sound Manager"]
stream = ExtResource("5_lt3ki")
volume_db = -15.0
bus = &"sfx"

[node name="HoverSound" type="AudioStreamPlayer" parent="Sound Manager"]
stream = ExtResource("6_srmur")
volume_db = -15.0
bus = &"sfx"

[node name="ClickSound" type="AudioStreamPlayer" parent="Sound Manager"]
stream = ExtResource("7_d38xc")
volume_db = -15.0
bus = &"sfx"

[node name="Background Image" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 1080.0
texture = ExtResource("8_0kq35")
expand_mode = 1

[node name="CameraHolder" type="Node2D" parent="."]

[node name="MainMenuCamera" type="Camera2D" parent="CameraHolder"]
position = Vector2(960, 540)
scale = Vector2(1e-05, 1e-05)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Main Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Version Control Label" type="Label" parent="Main Menu"]
layout_mode = 0
offset_left = 38.0
offset_top = 1040.0
offset_right = 155.0
offset_bottom = 1070.0
text = "Version: 0.2"
label_settings = SubResource("LabelSettings_uj1lj")

[node name="GameName" type="Label" parent="Main Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -316.5
offset_top = 80.0
offset_right = 316.5
offset_bottom = 258.0
grow_horizontal = 2
text = "Space Sim"
label_settings = SubResource("LabelSettings_i3pit")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButtons" type="VBoxContainer" parent="Main Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = -273.0
offset_right = 124.0
offset_bottom = -172.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="StartButton" type="Button" parent="Main Menu/MainMenuButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.403922, 0.0588235, 0.25098, 1)
text = "Start"
flat = true

[node name="OptionsButton" type="Button" parent="Main Menu/MainMenuButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.403922, 0.0588235, 0.25098, 1)
text = "Options"
flat = true

[node name="QuitButton" type="Button" parent="Main Menu/MainMenuButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.403922, 0.0588235, 0.25098, 1)
text = "Quit"
flat = true

[node name="Options Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1920.0
offset_right = 3840.0
offset_bottom = 1080.0

[node name="OptionsName" type="Label" parent="Options Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.0
offset_top = 80.0
offset_right = 248.0
offset_bottom = 258.0
grow_horizontal = 2
text = "Options"
label_settings = SubResource("LabelSettings_lfya7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="VBoxContainer" parent="Options Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 82.0
offset_top = -111.0
offset_right = 127.0
offset_bottom = -71.0001
grow_vertical = 0
scale = Vector2(2.79913, 1.86847)

[node name="BackButton" type="Button" parent="Options Menu/BackButton"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.403922, 0.0588235, 0.25098, 1)
text = "Back"
flat = true

[node name="Master Sound" type="HSlider" parent="Options Menu"]
layout_mode = 0
offset_left = 281.0
offset_top = 327.0
offset_right = 976.0
offset_bottom = 520.0
max_value = 1.0
step = 0.001
value = 1.0

[node name="Sound Name" type="Label" parent="Options Menu/Master Sound"]
layout_mode = 0
offset_left = 39.0
offset_top = 33.9999
offset_right = 164.0
offset_bottom = 56.9999
text = "MASTER SOUND"
label_settings = SubResource("LabelSettings_qx8qx")

[node name="MasterSound Icon" type="TextureRect" parent="Options Menu/Master Sound"]
layout_mode = 0
offset_left = -125.0
offset_top = 57.0
offset_right = 1875.0
offset_bottom = 2057.0
scale = Vector2(0.0463276, 0.0463276)
texture = ExtResource("10_mxwkk")

[node name="Sound Level" type="Label" parent="Options Menu/Master Sound"]
layout_mode = 0
offset_left = 740.0
offset_top = 76.9999
offset_right = 790.0
offset_bottom = 117.0
text = "100"
label_settings = SubResource("LabelSettings_moy1g")

[node name="Music Sound" type="HSlider" parent="Options Menu"]
layout_mode = 0
offset_left = 281.0
offset_top = 457.0
offset_right = 976.0
offset_bottom = 650.0
max_value = 1.0
step = 0.001
value = 1.0

[node name="Sound Name" type="Label" parent="Options Menu/Music Sound"]
layout_mode = 0
offset_left = 39.0
offset_top = 33.9999
offset_right = 164.0
offset_bottom = 56.9999
text = "MUSIC SOUND"
label_settings = SubResource("LabelSettings_qx8qx")

[node name="MusicSound Icon" type="TextureRect" parent="Options Menu/Music Sound"]
layout_mode = 0
offset_left = -125.0
offset_top = 57.0
offset_right = 1875.0
offset_bottom = 2057.0
scale = Vector2(0.0463276, 0.0463276)
texture = ExtResource("10_mxwkk")

[node name="Sound Level" type="Label" parent="Options Menu/Music Sound"]
layout_mode = 0
offset_left = 740.0
offset_top = 76.9999
offset_right = 790.0
offset_bottom = 117.0
text = "100"
label_settings = SubResource("LabelSettings_moy1g")

[node name="SFX Sound" type="HSlider" parent="Options Menu"]
layout_mode = 0
offset_left = 281.0
offset_top = 586.0
offset_right = 976.0
offset_bottom = 779.0
max_value = 1.0
step = 0.001
value = 1.0

[node name="Sound Name" type="Label" parent="Options Menu/SFX Sound"]
layout_mode = 0
offset_left = 39.0
offset_top = 33.9999
offset_right = 164.0
offset_bottom = 56.9999
text = "SFX SOUND"
label_settings = SubResource("LabelSettings_qx8qx")

[node name="SFXSound Icon" type="TextureRect" parent="Options Menu/SFX Sound"]
layout_mode = 0
offset_left = -125.0
offset_top = 57.0
offset_right = 1875.0
offset_bottom = 2057.0
scale = Vector2(0.0463276, 0.0463276)
texture = ExtResource("10_mxwkk")

[node name="Sound Level" type="Label" parent="Options Menu/SFX Sound"]
layout_mode = 0
offset_left = 740.0
offset_top = 76.9999
offset_right = 790.0
offset_bottom = 117.0
text = "100"
label_settings = SubResource("LabelSettings_moy1g")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = 1058.0
offset_top = 331.0
offset_right = 1098.0
offset_bottom = 371.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_cull_mask = 4294967294
size = Vector2i(500, 500)
render_target_update_mode = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.707107, -0.707107, 1.23634e-07, 0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0, 0, 0)
mesh = SubResource("BoxMesh_demcr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/MeshInstance3D"]
libraries = {
"": SubResource("AnimationLibrary_3s758")
}
autoplay = "spin"

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.73373)

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.710443, 0.703754, 0, -0.703754, 0.710443, 0.394856, 2.41116, 2.56366)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]

[connection signal="mouse_entered" from="Main Menu/MainMenuButtons/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="Main Menu/MainMenuButtons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="Main Menu/MainMenuButtons/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="Main Menu/MainMenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="Main Menu/MainMenuButtons/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Main Menu/MainMenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Main Menu/MainMenuButtons/QuitButton" to="Main Menu/MainMenuButtons/QuitButton" method="_on_pressed"]
[connection signal="mouse_entered" from="Options Menu/BackButton/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="Options Menu/BackButton/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="Options Menu/Master Sound" to="Sound Manager" method="_on_master_sound_value_changed"]
[connection signal="value_changed" from="Options Menu/Music Sound" to="Sound Manager" method="_on_music_sound_value_changed"]
[connection signal="value_changed" from="Options Menu/SFX Sound" to="Sound Manager" method="_on_sfx_sound_value_changed"]
